# holohub

./: dev_container  run
.devcontainer/: devcontainer.json
applications/: CMakeLists.txt
applications/endoscopy_tool_tracking/cpp/: main.cpp
applications/endoscopy_tool_tracking/python/: endoscopy_tool_tracking.py
applications/holoviz/holoviz_hdr/: README.md  holoviz_hdr.cpp
applications/holoviz/holoviz_srgb/: CMakeLists.txt  holoviz_srgb.cpp  metadata.json
applications/holoviz/holoviz_ui/: CMakeLists.txt  README.md  holoviz_ui.cpp  metadata.json
applications/slang/: CMakeLists.txt  README.md  metadata.json
applications/slang/slang_gamma_correction/: README.md
applications/slang/slang_gamma_correction/cpp/: CMakeLists.txt  slang_gamma_correction.cpp
applications/slang/slang_simple/cpp/: metadata.json  slang_simple.cpp
applications/slang/slang_simple/python/: CMakeLists.txt  metadata.json
applications/slang/src/: main.cpp  shader.slang
applications/volume_rendering/: CMakeLists.txt  README.md  json_loader.cpp  json_loader.hpp  volume_rendering.cpp
operators/gamma_correction/: CMakeLists.txt  README.md  metadata.json
operators/slang_shader/: CMakeLists.txt  README.md  Reflection.json  command.cpp  command.hpp  holoscan.slang  metadata.json  slang_shader.cpp  slang_shader.hpp  slang_shader_op.cpp
operators/visualizer_icardio/: CMakeLists.txt  visualizer_icardio.cpp  visualizer_icardio.hpp
operators/volume_renderer/: CMakeLists.txt  README.md  dataset.cpp  dataset.hpp  volume_renderer.cpp  volume_renderer.hpp
(+17 files in other folders)
